--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "a02-maana908",
+  "name": "pwd",
   "version": "1.0.0",
-  "description": "(CSS frameworks)",
+  "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-f059dc9a6f8d3a56e377f745f24479a46679e63a5d9fe6f495e02850cd0d8118.svg)](https://classroom.github.com/online_ide?assignment_repo_id=6315090&assignment_repo_type=AssignmentRepo) # a02 Like building a house",
   "main": "index.js",
+  "dependencies": {
+    "browser-sync": "^2.27.7",
+    "bulma": "^0.9.3"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,14 +15,10 @@
     "type": "git",
     "url": "git+https://github.com/jdmar3-comp426/a02-Maana908.git"
   },
-  "author": "Maanasa Rajeshwer",
-  "license": "LGPL-3.0-only",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-Maana908/issues"
   },
-  "homepage": "https://github.com/jdmar3-comp426/a02-Maana908#readme",
-  "dependencies": {
-    "browser-sync": "^2.27.7",
-    "bulma": "^0.9.3"
-  }
+  "homepage": "https://github.com/jdmar3-comp426/a02-Maana908#readme"
 }
