--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/jdmar3-comp426/a02-Maana908.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-Maana908/issues"
   },
